--- a/winpcaptest2/winpcaptest2.vcxproj.filters
+++ b/winpcaptest2/winpcaptest2.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="winpcaptest2.cpp">
+    <ClCompile Include="winpcaptest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
